Issue #1445890 by metakel, Coop920, acbramley: Switch to rich text editor link being covered.

--- a/core.css
+++ b/core.css
@@ -552,6 +552,10 @@ body.page-admin div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane field
   margin-top:-10px;
   border-top:none; 
   }
+.text-format-wrapper .filter-wrapper{
+  border-top:1px solid #CCC;
+  margin-top: 0;
+  }
 
 .filter-wrapper .fieldset-content,
 .fieldset .fieldset.filter-wrapper .fieldset-content  {
